--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,7 +1,7 @@
 .Sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
-    background-color: var(--inverted-bg-color);
+    background-color: #ccc;
     position: relative;
     transition: width 0.2s;
 }
