--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,8 +6,37 @@
     transition: width 0.2s;
 }
 
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    margin-left: 30px;
+    transition: all 0.25s;
+
+    &Item {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        text-decoration: none;
+
+        svg {
+            fill: var(--inverted-primary-color);
+        }
+    }
+}
+
 .collapsed {
     width: var(--sidebar-width-collapsed);
+
+    .links {
+        &Item {
+            span {
+                opacity: 0;
+                width: 0;
+            }
+        }
+    }
 }
 
 .switchers {
@@ -19,4 +48,10 @@
     width: 100%;
     flex-direction: column;
     gap: 10px;
+}
+
+.collapseBtn {
+    position: absolute;
+    right: -32px;
+    bottom: 60px;
 }
